# solar-satellite-ai

./: .dockerignore  .gitignore  .vercelignore  ANALISIS_ERRORES_VERCEL.md  CONFIGURAR_ROOT_DIRECTORY.md  Dockerfile  GEMINI_SETUP.md  PASOS_CONFIGURACION.md  README.md  SOLUCION_FRONTEND_VERCEL.md  VERCEL_DEPLOYMENT.md  app.py  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt  vercel.json  wsgi.py
.cursor/rules/: code-rules.mdc
.github/workflows/: ci.yml
api/: index.py  requirements.txt
backend/src/: .env.example
backend/src/solar_ai_backend/: config.py  main.py
backend/src/solar_ai_backend/api/: __init__.py  routes.py
backend/src/solar_ai_backend/schemas/: models.py
backend/src/solar_ai_backend/services/: enrichment.py  google_maps_client.py  mapbox_client.py  vision_agent.py
backend/src/solar_ai_backend/utils/: env_loader.py  excel_export.py
docker/: api.Dockerfile
docs/: frontend_prompts.md  known_issues.md  leeds_endpoint.md  project_structure.md  proyect_overview.md  requirements.md  roof_analysis_pipeline.md
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/checkout/: page.tsx
frontend/app/results/: page.tsx
frontend/app/success/: page.tsx
mcp/: mcp.json
tests/: conftest.py  test_mapbox_client.py  test_vision_agent.py
