[tool.poetry]
name = "solar-ai-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "solar_ai_backend", from = "backend/src" }]

[tool.poetry.dependencies]
python = "^3.10"
langchain = ">=0.3.27,<0.4.0"
fastapi = ">=0.119.0,<0.120.0"
uvicorn = ">=0.37.0,<0.38.0"
pydantic = ">=2.12.2,<3.0.0"
httpx = ">=0.27.2,<0.28.0"
openpyxl = ">=3.1.5,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
black = ">=25.9.0,<26.0.0"
isort = ">=7.0.0,<8.0.0"
mypy = ">=1.18.2,<2.0.0"
flake8 = ">=7.3.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"